# FEWS-Archive-MongoDB-plugin

./: .gitignore  LICENSE  README.md  pom.xml
archive-database/: README.md  dependency-reduced-pom.xml  pom.xml
archive-database-temp/: .gitignore
archive-graphcast/: .gitattributes  .gitignore  LICENSE  README.md  build.cmd  build.sh  build_conda.sh  build_manylinux.sh  build_wheel.sh  environment.yml  frozen_requirements.txt  graphcast.cmd  graphcast.sh  graphcast_env.cmd  graphcast_env.sh  graphcast_fews.cmd  graphcast_fews.sh  package.cmd  package.sh  package_fews.cmd  package_fews.sh  pyproject.toml  requirements.txt  run_graphcast.py
archive-graphcast/configurations/: gfs_posix_config.xml  gfs_win_config.xml  ifs_posix_config.xml  ifs_win_config.xml
archive-graphcast/decorator/: decorator.py
archive-graphcast/environments/: environment_rhel7_cpu.yml  environment_win11_cpu.yml
archive-graphcast/install/: jasper-4.2.9-h1588d4d_1.conda  libaec-1.1.5-h088129d_0.conda  libjpeg-turbo-3.1.4.1-hb03c661_0.conda
archive-graphcast/model/: graphcast.py
archive-graphcast/models/GraphCastOperationalGfs/: .cdsapirc  model.npz
archive-graphcast/models/GraphCastOperationalIfs/: diffs_stddev_by_level.nc  mean_by_level.nc  model.npz  stddev_by_level.nc
archive-graphcast/sources/: gfs.py  ifs.py
archive-graphcast/tva_graphcast/: __main__.py  run_graphcast.py
archive-graphcast/tva_graphcast/decorator/: __init__.py  decorator.py
archive-graphcast/tva_graphcast/model/: __init__.py  graphcast.py
archive-graphcast/tva_graphcast/sources/: __init__.py  gfs.py  ifs.py
(+1060 files in other folders)
